fixed horizontal scroll

--- a/src/components/marko-layout/layout.scss
+++ b/src/components/marko-layout/layout.scss
@@ -2,6 +2,7 @@ html, body {
     font-family: system-ui;
     padding: 0;
     margin: 0;
+    overflow-x: hidden;
   }
 
 .primary {
